--- a/imdb_analysis.Rmd
+++ b/imdb_analysis.Rmd
@@ -241,8 +241,9 @@ names(dat_2020)[16] <-"Topic_8"
 names(dat_2020)[17] <-"Topic_9"
 names(dat_2020)[18] <-"Topic_10"
 
-# Transform country to categorical variable
-dat_2020$Country <- as.factor(dat_2020$Country)
+# Prepare country variable
+dat_2020$Country <- as.character(dat_2020$Country)
+dat_2020$Country <- str_trim(dat_2020$Country)
 ```
 
 ## Topics Model (2020)
@@ -276,7 +277,7 @@ stargazer(duration_model_2020,type = "text", out = "Table 11",
 ```{r}
 # UK
 dat_2020$UK <- NA
-dat_2020$UK[dat_2020$Country==" UK "]<-1
+dat_2020$UK[dat_2020$Country=="UK"]<-1
 dat_2020$UK[is.na(dat_2020$UK)]<- 0
 
 uk_romance_model_2020 <- lm(Rating ~ UK*Topic_7, data = dat_2020)
@@ -296,7 +297,7 @@ stargazer(uk_romance_model_2020,
 
 # USA
 dat_2020$USA <- NA
-dat_2020$USA[dat_2020$Country==" USA "]<-1
+dat_2020$USA[dat_2020$Country=="USA"]<-1
 dat_2020$USA[is.na(dat_2020$USA)]<- 0
 
 # USA model
@@ -321,14 +322,9 @@ dat_2020$Country <- as.character(dat_2020$Country)
 dat_2020$Country <- str_trim(dat_2020$Country)
 
 # Create country dummy variables
-# USA
-dat_2020$USA <- NA
-dat_2020$USA[dat_2020$Country==" USA "]<-1
-dat_2020$USA[is.na(dat_2020$USA)]<- 0
-
 # Canada
 dat_2020$Canada <- NA
-dat_2020$Canada[dat_2020$Country==" Canada "]<-1
+dat_2020$Canada[dat_2020$Country=="Canada"]<-1
 dat_2020$Canada[is.na(dat_2020$Canada)]<- 0
 
 # Country Model
@@ -356,19 +352,4 @@ stargazer(unit_fe_2020,
           dep.var.labels.include = FALSE,
           column.labels = c("Rating"))
 # Note: Overall rating is high at 8.7, but the other estimates are statistically insignificant. 
-```
-## Scraped Metascore Model 
-```{r scraped metascore model, warning = FALSE}
-# Metascore model using scraped data 
-metascore_model <- lm(Rating ~ Metascore + Topic_1 + Topic_2 + 
-                Topic_3 + Topic_4 + Topic_5+ Topic_6 + 
-                Topic_7 + Topic_8 + Topic_9 + Topic_10, 
-                data = dat_2020)
-stargazer(metascore_model,
-          type = "text", out = "Table 15", 
-          title = "Overall Effect of Rating with each Topic accounting for country 2020 and Metascore", 
-          omit.stat=c("LL","ser","f","adj.rsq"),
-          dep.var.labels.include = FALSE,
-          column.labels = c("Rating"))
-# Note: The Metascore seems to have a very marginal effect on Rating. The other estimates are statistically insignificant.
 ```
